[gd_scene load_steps=24 format=3 uid="uid://dr0fetlktqbbm"]

[ext_resource type="Script" path="res://modules/rooms/test_area_room_3/test_area_room_3.gd" id="1_mnoc0"]
[ext_resource type="TileSet" uid="uid://dj1l5fgk0wftn" path="res://assets/tilesets/test_action_tileset.tres" id="2_y3tu0"]
[ext_resource type="PackedScene" uid="uid://c61di70f3r436" path="res://modules/exit_area/exit_area.tscn" id="3_vj88i"]
[ext_resource type="PackedScene" uid="uid://dcpfgoqoaghou" path="res://modules/invisible_wall/invisible_wall.tscn" id="4_lv8ph"]
[ext_resource type="PackedScene" uid="uid://fy55thn23ao5" path="res://modules/player_spawn_point/player_spawn_point.tscn" id="5_a07k4"]
[ext_resource type="PackedScene" uid="uid://bgyfc7skye1bh" path="res://modules/combat_manager/combat_manager.tscn" id="6_ukp74"]
[ext_resource type="PackedScene" uid="uid://d18di0xuv174k" path="res://modules/characters/enemies/ranger/ranger.tscn" id="7_mhe3m"]
[ext_resource type="PackedScene" uid="uid://bmcdxiqvkovb" path="res://modules/characters/enemies/fast_enemy/fast_enemy.tscn" id="8_da234"]
[ext_resource type="PackedScene" uid="uid://c8ua2uil50vnq" path="res://modules/enemy_spawner/enemy_spawner.tscn" id="9_rlysr"]
[ext_resource type="PackedScene" uid="uid://drlx3u2mngfq0" path="res://modules/player_spawner/player_spawner.tscn" id="10_5jnhh"]
[ext_resource type="PackedScene" uid="uid://dlppasf4dvwif" path="res://modules/camera_limiter/camera_limiter.tscn" id="11_1lmdp"]

[sub_resource type="NavigationPolygon" id="NavigationPolygon_rsms8"]
vertices = PackedVector2Array(296, 56, 296, 104, -72, 104, -72, 56)
polygons = Array[PackedInt32Array]([PackedInt32Array(0, 1, 2, 3)])
outlines = Array[PackedVector2Array]([PackedVector2Array(-72, 56, -72, 104, 296, 104, 296, 56)])

[sub_resource type="NavigationPolygon" id="NavigationPolygon_181p7"]
vertices = PackedVector2Array(72, -104, 72, 56, -72, 56, -72, -104)
polygons = Array[PackedInt32Array]([PackedInt32Array(0, 1, 2, 3)])
outlines = Array[PackedVector2Array]([PackedVector2Array(-72, -104, -72, 56, 72, 56, 72, -104)])

[sub_resource type="NavigationPolygon" id="NavigationPolygon_csb2i"]
vertices = PackedVector2Array(152, -104, 296, -104, 296, 56, 152, 56)
polygons = Array[PackedInt32Array]([PackedInt32Array(0, 1, 2, 3)])
outlines = Array[PackedVector2Array]([PackedVector2Array(152, -104, 296, -104, 296, 56, 152, 56)])

[sub_resource type="NavigationPolygon" id="NavigationPolygon_ppuvj"]
vertices = PackedVector2Array(296, -152, 296, -104, -72, -104, -72, -152)
polygons = Array[PackedInt32Array]([PackedInt32Array(0, 1, 2, 3)])
outlines = Array[PackedVector2Array]([PackedVector2Array(-72, -152, -72, -104, 296, -104, 296, -152)])

[sub_resource type="RectangleShape2D" id="RectangleShape2D_id280"]
size = Vector2(32, 16)

[sub_resource type="RectangleShape2D" id="RectangleShape2D_hwal4"]
size = Vector2(32, 16)

[sub_resource type="RectangleShape2D" id="RectangleShape2D_4btp4"]
size = Vector2(16, 32)

[sub_resource type="RectangleShape2D" id="RectangleShape2D_osqym"]
size = Vector2(16, 32)

[sub_resource type="RectangleShape2D" id="RectangleShape2D_tvamj"]
size = Vector2(32, 16)

[sub_resource type="RectangleShape2D" id="RectangleShape2D_ny7nw"]
size = Vector2(32, 16)

[sub_resource type="RectangleShape2D" id="RectangleShape2D_gdw5x"]
size = Vector2(16, 32)

[sub_resource type="RectangleShape2D" id="RectangleShape2D_au8h0"]
size = Vector2(16, 32)

[node name="TestAreaRoom3" type="Node2D"]
script = ExtResource("1_mnoc0")

[node name="Map" type="TileMap" parent="."]
y_sort_enabled = true
tile_set = ExtResource("2_y3tu0")
format = 2
layer_0/name = "Floor"
layer_0/y_sort_enabled = true
layer_0/z_index = -1
layer_0/tile_data = PackedInt32Array(393225, 131072, 5, 327689, 0, 6, 262153, 0, 6, 196617, 0, 5, 393224, 131072, 6, 327688, 65536, 4, 262152, 0, 4, 196616, 0, 5, 393223, 65536, 4, 327687, 131072, 4, 262151, 0, 4, 196615, 131072, 5, 393222, 0, 5, 327686, 65536, 5, 262150, 65536, 5, 196614, 0, 4, 393221, 131072, 5, 327685, 131072, 4, 262149, 131072, 6, 196613, 0, 6, 393220, 131072, 5, 327684, 131072, 6, 262148, 131072, 4, 196612, 131072, 4, 393227, 131072, 4, 327691, 131072, 6, 262155, 65536, 4, 196619, 65536, 4, 393226, 131072, 6, 327690, 0, 5, 262154, 65536, 6, 196618, 65536, 5, 393219, 0, 4, 327683, 0, 4, 262147, 131072, 4, 196611, 0, 6, 393218, 131072, 4, 327682, 0, 6, 262146, 65536, 6, 196610, 65536, 6, 393217, 65536, 4, 327681, 65536, 4, 262145, 0, 5, 196609, 0, 6, 131076, 65536, 6, 65540, 131072, 4, 4, 131072, 4, -65532, 65536, 5, -131068, 65536, 5, -196604, 0, 6, -262140, 0, 6, -327676, 0, 4, -393212, 0, 6, 131075, 131072, 6, 65539, 65536, 6, 3, 0, 4, -65533, 0, 5, -131069, 65536, 6, -196605, 0, 6, -262141, 0, 6, -327677, 65536, 6, -393213, 131072, 4, 131074, 131072, 5, 65538, 0, 4, 2, 65536, 4, -65534, 65536, 5, -131070, 65536, 5, -196606, 131072, 4, -262142, 131072, 4, -327678, 0, 5, -393214, 131072, 4, 131073, 131072, 4, 65537, 65536, 4, 1, 131072, 6, -65535, 0, 6, -131071, 131072, 6, -196607, 65536, 4, -262143, 0, 4, -327679, 65536, 6, -393215, 0, 4, 393216, 131072, 6, 327680, 131072, 6, 262144, 131072, 4, 196608, 0, 6, 131072, 131072, 5, 65536, 65536, 5, 0, 65536, 6, -65536, 131072, 4, -131072, 0, 4, -196608, 131072, 6, -262144, 131072, 5, -327680, 65536, 4, -393216, 0, 4, 458751, 65536, 6, 393215, 65536, 6, 327679, 131072, 5, 262143, 0, 6, 196607, 65536, 4, 131071, 0, 6, 65535, 0, 4, -1, 131072, 6, -65537, 131072, 4, -131073, 131072, 4, -196609, 131072, 4, -262145, 65536, 6, -327681, 131072, 4, 458750, 65536, 4, 393214, 131072, 6, 327678, 131072, 4, 262142, 0, 6, 196606, 0, 4, 131070, 0, 5, 65534, 131072, 6, -2, 0, 4, -65538, 65536, 4, -131074, 0, 6, -196610, 131072, 6, -262146, 131072, 4, -327682, 131072, 4, 458749, 131072, 4, 393213, 0, 5, 327677, 131072, 6, 262141, 131072, 6, 196605, 0, 5, 131069, 65536, 4, 65533, 65536, 5, -3, 0, 5, -65539, 65536, 6, -131075, 131072, 5, -196611, 131072, 6, -262147, 0, 6, -327683, 131072, 4, 458748, 65536, 6, 393212, 0, 4, 327676, 65536, 5, 262140, 65536, 4, 196604, 65536, 6, 131068, 65536, 6, 65532, 131072, 4, -4, 65536, 4, -65540, 131072, 5, -131076, 131072, 5, -196612, 65536, 6, -262148, 65536, 4, -327684, 65536, 5, 458747, 65536, 4, 393211, 131072, 6, 327675, 0, 6, 262139, 65536, 6, 196603, 0, 6, 131067, 65536, 6, 65531, 131072, 5, -5, 0, 4, -65541, 131072, 5, -131077, 131072, 5, -196613, 0, 4, -262149, 131072, 4, -327685, 65536, 4, 393234, 0, 4, 327698, 65536, 6, 262162, 131072, 4, 196626, 0, 6, 131090, 65536, 4, 65554, 0, 6, 18, 131072, 4, -65518, 65536, 5, -131054, 131072, 4, -196590, 131072, 6, -262126, 65536, 6, -327662, 0, 5, -393198, 0, 4, 393233, 65536, 5, 327697, 0, 5, 262161, 131072, 5, 196625, 65536, 6, 131089, 65536, 5, 65553, 65536, 6, 17, 0, 5, -65519, 65536, 4, -131055, 0, 6, -196591, 0, 6, -262127, 131072, 6, -327663, 0, 6, -393199, 0, 4, 393232, 131072, 6, 327696, 131072, 6, 262160, 0, 6, 196624, 131072, 5, 131088, 65536, 6, 65552, 131072, 4, 16, 65536, 4, -65520, 0, 4, -131056, 0, 6, -196592, 0, 6, -262128, 65536, 4, -327664, 0, 5, -393200, 0, 4, 393231, 65536, 6, 327695, 65536, 6, 262159, 131072, 5, 196623, 65536, 5, 131087, 0, 6, 65551, 65536, 6, 15, 131072, 4, -65521, 65536, 6, -131057, 131072, 6, -196593, 65536, 4, -262129, 131072, 4, -327665, 131072, 4, -393201, 65536, 6, 393230, 0, 6, 327694, 65536, 4, 262158, 131072, 6, 196622, 131072, 4, 131086, 65536, 6, 65550, 131072, 4, 14, 131072, 4, -65522, 65536, 6, -131058, 131072, 6, -196594, 65536, 6, -262130, 131072, 5, -327666, 131072, 4, -393202, 0, 5, 393229, 131072, 4, 327693, 0, 6, 262157, 65536, 4, 196621, 131072, 5, 131085, 131072, 5, 65549, 65536, 4, 13, 131072, 4, -65523, 0, 5, -131059, 131072, 5, -196595, 65536, 5, -262131, 0, 5, -327667, 131072, 4, -393203, 131072, 4, 393228, 131072, 6, 327692, 131072, 5, 262156, 65536, 4, 196620, 65536, 5, 131084, 0, 6, 65548, 0, 5, 12, 0, 5, -65524, 0, 5, -131060, 65536, 6, -196596, 131072, 6, -262132, 131072, 4, -327668, 0, 4, -393204, 0, 6, 131083, 65536, 6, 65547, 0, 4, 11, 131072, 5, -65525, 65536, 5, -131061, 0, 4, -196597, 65536, 5, -262133, 0, 4, -327669, 0, 4, -393205, 131072, 4, 131082, 0, 4, 65546, 65536, 6, 10, 131072, 4, -65526, 65536, 6, -131062, 65536, 4, -196598, 131072, 6, -262134, 65536, 4, -327670, 0, 5, -393206, 65536, 4, 131081, 0, 6, 65545, 131072, 5, 9, 65536, 6, -65527, 131072, 5, -131063, 65536, 5, -196599, 0, 6, -262135, 131072, 6, -327671, 65536, 5, -393207, 131072, 4, -458734, 131072, 6, -524270, 65536, 5, -589806, 0, 4, -655342, 0, 5, -458735, 0, 4, -524271, 65536, 6, -589807, 0, 5, -655343, 131072, 6, -458736, 65536, 4, -524272, 0, 4, -589808, 0, 6, -655344, 0, 4, -458737, 65536, 4, -524273, 65536, 6, -589809, 0, 6, -655345, 131072, 5, -458738, 65536, 5, -524274, 0, 6, -589810, 65536, 4, -655346, 65536, 6, -458739, 0, 6, -524275, 131072, 5, -589811, 131072, 6, -655347, 65536, 5, -458740, 0, 5, -524276, 0, 6, -589812, 65536, 4, -655348, 65536, 6, -458741, 0, 6, -524277, 131072, 4, -589813, 0, 6, -655349, 0, 4, -458742, 65536, 6, -524278, 65536, 6, -589814, 65536, 5, -655350, 0, 6, -458743, 131072, 4, -524279, 131072, 6, -589815, 65536, 4, -655351, 131072, 5, -458744, 65536, 6, -524280, 131072, 5, -589816, 65536, 4, -655352, 131072, 6, -458745, 65536, 4, -524281, 131072, 4, -589817, 131072, 4, -655353, 65536, 6, -458746, 131072, 6, -524282, 131072, 4, -589818, 0, 5, -655354, 0, 6, -458747, 65536, 6, -524283, 0, 6, -589819, 131072, 6, -655355, 65536, 4, -458748, 65536, 6, -524284, 131072, 6, -589820, 131072, 5, -655356, 0, 6, -458749, 131072, 5, -524285, 0, 5, -589821, 131072, 5, -655357, 65536, 4, -458750, 131072, 4, -524286, 65536, 6, -589822, 65536, 6, -655358, 131072, 5, -458751, 0, 4, -524287, 0, 6, -589823, 0, 5, -655359, 131072, 4, -458752, 131072, 6, -524288, 0, 5, -589824, 65536, 4, -655360, 65536, 5, -393217, 131072, 6, -458753, 131072, 6, -524289, 0, 5, -589825, 0, 6, -393218, 131072, 5, -458754, 65536, 4, -524290, 0, 5, -589826, 65536, 4, -393219, 65536, 5, -458755, 65536, 4, -524291, 0, 4, -589827, 65536, 5, -393220, 65536, 4, -458756, 65536, 4, -524292, 0, 5, -589828, 131072, 4, -393221, 65536, 4, -458757, 0, 4, -524293, 131072, 6, -589829, 0, 6, -65542, 65536, 6, -131078, 131072, 5, -65543, 65536, 6, -131079, 0, 5, -720889, 65536, 4, -786425, 65536, 6, -851961, 65536, 4, -720890, 65536, 5, -786426, 65536, 5, -851962, 131072, 5, -131052, 0, 4, -196588, 65536, 4, -131053, 131072, 4, -196589, 131072, 6, 524295, 0, 6, 458759, 65536, 6, 524294, 0, 4, 458758, 65536, 4, -917497, 65536, 6, -917498, 65536, 5)
layer_1/name = "Walls"
layer_1/enabled = true
layer_1/modulate = Color(1, 1, 1, 1)
layer_1/y_sort_enabled = true
layer_1/y_sort_origin = 0
layer_1/z_index = 0
layer_1/tile_data = PackedInt32Array(-655365, 65536, 1, -655364, 65536, 1, -655363, 65536, 1, -655362, 65536, 1, -655361, 65536, 1, -720896, 65536, 1, -720895, 65536, 1, -720894, 65536, 1, -720893, 65536, 1, -720892, 65536, 1, -720891, 65536, 1, -720888, 65536, 1, -720887, 65536, 1, -720886, 65536, 1, -720885, 65536, 1, -720884, 65536, 1, -720883, 65536, 1, -720882, 65536, 1, -720881, 65536, 1, -720880, 65536, 1, -720879, 65536, 1, -720878, 65536, 1, -917485, 131072, 0, -851949, 131072, 1, -786413, 131072, 1, -720877, 131072, 1, -655341, 131072, 1, -589805, 131072, 1, -524269, 131072, 1, -458733, 131072, 1, -393197, 131072, 1, -327661, 131072, 1, -262125, 196608, 1, -65517, 131072, 1, 19, 131072, 1, 65555, 131072, 1, 131091, 131072, 1, 196627, 131072, 1, 262163, 131072, 1, 327699, 131072, 1, 393235, 131072, 2, 393234, 0, 3, 393233, 0, 3, 393232, 0, 3, 393231, 0, 3, 393230, 0, 3, 393229, 0, 3, 393228, 0, 3, 393227, 0, 3, 393226, 0, 3, 393225, 0, 3, 393224, 196608, 3, 393221, 262144, 0, 393220, 0, 3, 393219, 0, 3, 393218, 0, 3, 393217, 0, 3, 393216, 0, 3, 458751, 0, 3, 458750, 0, 3, 458749, 0, 3, 458748, 0, 3, 458747, 0, 3, 458746, 0, 2, 393210, 0, 1, 327674, 0, 1, 262138, 0, 1, 196602, 0, 1, 131066, 0, 1, 65530, 0, 1, -6, 0, 1, -196614, 196608, 2, -262150, 0, 1, -327686, 0, 1, -393222, 0, 1, -458758, 0, 1, -524294, 0, 1, -589830, 0, 1, -655366, 0, 1, -720902, 0, 1, -786438, 0, 1, -851974, 0, 0, 131077, 65536, 1, 131078, 65536, 1, 131079, 65536, 1, 131080, 65536, 1, -131067, 131072, 1, -196603, 131072, 1, -262139, 131072, 1, -327675, 131072, 1, -393211, 131072, 1, -458747, 196608, 3, -458746, 0, 3, -458745, 0, 3, -458744, 262144, 0, -393208, 0, 1, -327672, 0, 1, -262136, 0, 1, -196600, 0, 1, -131064, 0, 1, 458757, 0, 1, 458760, 131072, 1, -196615, 65536, 0, -65543, 0, 3, -65542, 262144, 0, -262124, 65536, 0, -131053, 196608, 3, -131052, 0, 3, -851973, 65536, 0, -851972, 65536, 0, -851971, 65536, 0, -851970, 65536, 0, -851969, 65536, 0, -917504, 65536, 0, -917503, 65536, 0, -917502, 65536, 0, -917501, 65536, 0, -917500, 65536, 0, -917499, 196608, 2, -917496, 196608, 1, -917494, 65536, 0, -917495, 65536, 0, -917493, 65536, 0, -917492, 65536, 0, -917491, 65536, 0, -917490, 65536, 0, -917489, 65536, 0, -917488, 65536, 0, -917487, 65536, 0, -917486, 65536, 0, 524293, 0, 1, 524296, 131072, 1, -65530, 65536, 0, -65529, 65536, 0, -65531, 196608, 1, -65528, 196608, 2)
layer_2/name = "Collision"
layer_2/enabled = true
layer_2/modulate = Color(1, 1, 1, 1)
layer_2/y_sort_enabled = true
layer_2/y_sort_origin = 0
layer_2/z_index = -1
layer_2/tile_data = PackedInt32Array(-393210, 131072, 3, -327674, 131072, 3, -262138, 131072, 3, -196602, 131072, 3, -131066, 131072, 3, -393209, 131072, 3, -327673, 131072, 3, -262137, 131072, 3, -196601, 131072, 3, -131065, 131072, 3, 524283, 131072, 3, 524284, 131072, 3, 524285, 131072, 3, 524286, 131072, 3, 524287, 131072, 3, 458752, 131072, 3, 458753, 131072, 3, 458754, 131072, 3, 458755, 131072, 3, 458756, 131072, 3, 458757, 131072, 3, 458760, 131072, 3, 458761, 131072, 3, 458762, 131072, 3, 458763, 131072, 3, 458764, 131072, 3, 458765, 131072, 3, 458766, 131072, 3, 458767, 131072, 3, 458768, 131072, 3, 458769, 131072, 3, 458770, 131072, 3, 458771, 131072, 3, -65516, 131072, 3, -262124, 131072, 3, -196615, 131072, 3, -7, 131072, 3, 524282, 131072, 3, 65541, 131072, 3, 5, 131072, 3, -65531, 131072, 3, 65544, 131072, 3, 8, 131072, 3, -65528, 131072, 3)

[node name="EnemySpawnPoints" type="Node2D" parent="Map"]

[node name="EnemySpawnPoint" type="Marker2D" parent="Map/EnemySpawnPoints"]
position = Vector2(-32, -112)

[node name="EnemySpawnPoint2" type="Marker2D" parent="Map/EnemySpawnPoints"]
position = Vector2(256, -112)

[node name="EnemySpawnPoint3" type="Marker2D" parent="Map/EnemySpawnPoints"]
position = Vector2(-48, 48)

[node name="EnemySpawnPoint4" type="Marker2D" parent="Map/EnemySpawnPoints"]
position = Vector2(-16, 80)

[node name="EnemySpawnPoint5" type="Marker2D" parent="Map/EnemySpawnPoints"]
position = Vector2(240, 80)

[node name="EnemySpawnPoint6" type="Marker2D" parent="Map/EnemySpawnPoints"]
position = Vector2(272, 48)

[node name="PlayerSpawnPoints" type="Node2D" parent="Map"]

[node name="PlayerSpawnPoint" parent="Map/PlayerSpawnPoints" instance=ExtResource("5_a07k4")]
position = Vector2(112, 104)
spawn_id = "from_top"

[node name="PlayerSpawnPoint2" parent="Map/PlayerSpawnPoints" instance=ExtResource("5_a07k4")]
position = Vector2(112, -152)
spawn_id = "from_bottom"

[node name="PlayerSpawnPoint3" parent="Map/PlayerSpawnPoints" instance=ExtResource("5_a07k4")]
position = Vector2(-72, -32)
spawn_id = "from_right"

[node name="PlayerSpawnPoint4" parent="Map/PlayerSpawnPoints" instance=ExtResource("5_a07k4")]
position = Vector2(296, -32)
spawn_id = "from_left"

[node name="NavigationRegion2D" type="NavigationRegion2D" parent="Map"]
navigation_polygon = SubResource("NavigationPolygon_rsms8")

[node name="NavigationRegion2D2" type="NavigationRegion2D" parent="Map"]
navigation_polygon = SubResource("NavigationPolygon_181p7")

[node name="NavigationRegion2D3" type="NavigationRegion2D" parent="Map"]
navigation_polygon = SubResource("NavigationPolygon_csb2i")

[node name="NavigationRegion2D4" type="NavigationRegion2D" parent="Map"]
navigation_polygon = SubResource("NavigationPolygon_ppuvj")

[node name="InvisibleWall" parent="Map" groups=["removable_walls"] instance=ExtResource("4_lv8ph")]
position = Vector2(112, 120)

[node name="Collision" parent="Map/InvisibleWall" index="0"]
shape = SubResource("RectangleShape2D_id280")

[node name="InvisibleWall2" parent="Map" groups=["removable_walls"] instance=ExtResource("4_lv8ph")]
position = Vector2(112, -168)

[node name="Collision" parent="Map/InvisibleWall2" index="0"]
shape = SubResource("RectangleShape2D_hwal4")

[node name="InvisibleWall3" parent="Map" groups=["removable_walls"] instance=ExtResource("4_lv8ph")]
position = Vector2(-88, -32)

[node name="Collision" parent="Map/InvisibleWall3" index="0"]
shape = SubResource("RectangleShape2D_4btp4")

[node name="InvisibleWall4" parent="Map" groups=["removable_walls"] instance=ExtResource("4_lv8ph")]
position = Vector2(312, -32)

[node name="Collision" parent="Map/InvisibleWall4" index="0"]
shape = SubResource("RectangleShape2D_osqym")

[node name="ExitArea" parent="Map" instance=ExtResource("3_vj88i")]
position = Vector2(112, 136)
target_spawn = "from_bottom"
use_room_manager = true

[node name="Collision" parent="Map/ExitArea" index="0"]
shape = SubResource("RectangleShape2D_tvamj")

[node name="ExitArea2" parent="Map" instance=ExtResource("3_vj88i")]
position = Vector2(112, -184)
target_spawn = "from_top"
use_room_manager = true

[node name="Collision" parent="Map/ExitArea2" index="0"]
shape = SubResource("RectangleShape2D_ny7nw")

[node name="ExitArea3" parent="Map" instance=ExtResource("3_vj88i")]
position = Vector2(-104, -32)
target_spawn = "from_left"
use_room_manager = true

[node name="Collision" parent="Map/ExitArea3" index="0"]
shape = SubResource("RectangleShape2D_gdw5x")

[node name="ExitArea4" parent="Map" instance=ExtResource("3_vj88i")]
position = Vector2(328, -32)
target_spawn = "from_right"
use_room_manager = true

[node name="Collision" parent="Map/ExitArea4" index="0"]
shape = SubResource("RectangleShape2D_au8h0")

[node name="ColorRect" type="ColorRect" parent="Map"]
z_index = -100
offset_left = -112.0
offset_top = -224.0
offset_right = 336.0
offset_bottom = 144.0
color = Color(0, 0, 0, 1)

[node name="CameraLimiter" parent="Map" instance=ExtResource("11_1lmdp")]

[node name="TopLeft" parent="Map/CameraLimiter" index="0"]
position = Vector2(-112, -240)

[node name="BottomRight" parent="Map/CameraLimiter" index="1"]
position = Vector2(344, 144)

[node name="CombatManager" parent="." node_paths=PackedStringArray("enemy_spawner", "map") instance=ExtResource("6_ukp74")]
enemy_types = Array[PackedScene]([ExtResource("8_da234"), ExtResource("7_mhe3m")])
enemy_spawner = NodePath("../EnemySpawner")
map = NodePath("../Map")

[node name="EnemySpawner" parent="." node_paths=PackedStringArray("map", "spawn_points_container") instance=ExtResource("9_rlysr")]
map = NodePath("../Map")
spawn_points_container = NodePath("../Map/EnemySpawnPoints")

[node name="PlayerSpawner" parent="." node_paths=PackedStringArray("spawn_points_container", "map") instance=ExtResource("10_5jnhh")]
spawn_points_container = NodePath("../Map/PlayerSpawnPoints")
map = NodePath("../Map")

[editable path="Map/InvisibleWall"]
[editable path="Map/InvisibleWall2"]
[editable path="Map/InvisibleWall3"]
[editable path="Map/InvisibleWall4"]
[editable path="Map/ExitArea"]
[editable path="Map/ExitArea2"]
[editable path="Map/ExitArea3"]
[editable path="Map/ExitArea4"]
[editable path="Map/CameraLimiter"]
